// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (--url-rule-doc) > basic > uses the right URLs 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                            | Description             | ❌  |
| :---------------------------------------------- | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/no-bar/) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/no-foo/) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > basic > uses the right URLs 2`] = `
"# test/no-foo

📝 Description for no-foo.

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](https://example.com/rule-docs/no-bar/).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) > basic > uses the right URLs 3`] = `
"# test/no-bar

📝 Description for no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) > function > uses the custom URL 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                                               | Description             | ❌  |
| :----------------------------------------------------------------- | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/name:no-bar/path:README.md) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/name:no-foo/path:README.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > function > uses the custom URL 2`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                                                      | Description             | ❌  |
| :------------------------------------------------------------------------ | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/name:no-bar/path:nested/README.md) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/name:no-foo/path:nested/README.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > function > uses the custom URL 3`] = `
"# test/no-foo

📝 Description for no-foo.

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](https://example.com/rule-docs/name:no-bar/path:docs/rules/no-foo.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) > function > uses the custom URL 4`] = `
"# test/no-bar

📝 Description for no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) > function returns undefined > should fallback to the normal URL 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description             | ❌  |
| :----------------------------- | :---------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description for no-bar. |    |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > function returns undefined > should fallback to the normal URL 2`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                              | Description             | ❌  |
| :-------------------------------- | :---------------------- | :- |
| [no-bar](../docs/rules/no-bar.md) | Description for no-bar. |    |
| [no-foo](../docs/rules/no-foo.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > function returns undefined > should fallback to the normal URL 3`] = `
"# test/no-foo

📝 Description for no-foo.

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) > function returns undefined > should fallback to the normal URL 4`] = `
"# test/no-bar

📝 Description for no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) > rule names with URL-unsafe characters > URL-encodes relative function return values 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                                               | Description                   |
| :------------------------------------------------- | :---------------------------- |
| [no foo (bar)](docs/rules/no%20foo%20%28bar%29.md) | Description for no foo (bar). |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > rule names with URL-unsafe characters > URL-encodes the substituted rule name in string templates 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                                                                | Description                   |
| :------------------------------------------------------------------ | :---------------------------- |
| [no foo (bar)](https://example.com/rule-docs/no%20foo%20%28bar%29/) | Description for no foo (bar). |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) > rule names with URL-unsafe characters > leaves absolute function return values unencoded 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                                                                | Description                   |
| :------------------------------------------------------------------ | :---------------------------- |
| [no foo (bar)](https://example.com/rules/no%20foo%20%28bar%29.html) | Description for no foo (bar). |

<!-- end auto-generated rules list -->
"
`;
